cmake_minimum_required(VERSION 3.27)
project(Algorythmy_analizy_numerycznej)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorythmy_analizy_numerycznej
        algytmhya.cpp
        heart.cpp
        heart2.cpp
        learningc++.cpp
        Lekcja2.cpp
        Lekcja3.cpp
        Lekcja31.cpp
        Lekcja6.cpp
        Lekcja7.cpp)
